tests/fail/test_no_uint_encoding.nim
import ../../protobuf_serialization

type NoUIntEncoding = object
  x {.fieldNumber: 1.}: uint32

discard Protobuf.encode(NoUIntEncoding())
